--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ body.no-scroll {
   position: fixed; 
   overflow-y: scroll;
   width: 100%;
+  pointer-events: none;
 }
 .preload {
   transition: none !important;
@@ -385,18 +386,31 @@ header.mobile.on .menu {
   font-weight: 600;
 }
 
+.main_visual .fixed_area {
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 /* story */
 .story {
   position: relative;
   z-index: 10;
 }
 .story .inner {
+  overflow: hidden;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   width: 100%;
   height: 100%;
+  background-color: #020202;
 }
 .story .bar {
   position: absolute;
@@ -505,8 +519,8 @@ header.mobile.on .menu {
 /* slide */
 .slide {
   position: relative;
-  /* top: 0; */
   height: 200vh;
+  background-color: #020202;
 }
 .slide .inner {
   position: absolute;
@@ -621,10 +635,10 @@ header.mobile.on .menu {
   margin-right: 95px;
 }
 .slide .slide_item.b .text_area .line1 {
-  margin-left: 150px;
+  margin-left: 133px;
 }
 .slide .slide_item.c .text_area .line1 {
-  margin-left: 85px;
+  margin-left: 79px;
 }
 .slide .slide_btn {
   position: relative;
@@ -683,6 +697,8 @@ header.mobile.on .menu {
 
 /* attend */
 .attend {
+  position: relative;
+  background-color: #020202;
   padding: 230px 0 200px;
 }
 .attend .inner {
@@ -716,27 +732,6 @@ header.mobile.on .menu {
   background: rgba(36, 35, 35, 0.80);
   backdrop-filter: blur(25px);
 }
-/* .attend .img_area {
-  height: 218px;
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-size: 100%;
-}
-.attend .slide1 .img_area {
-  background-image: url('https://hlab.im/hubfs/2023%20HREVOLUTION/swiper_img1.png');
-}
-.attend .slide2 .img_area {
-  background-image: url('https://hlab.im/hubfs/2023%20HREVOLUTION/swiper_img2.png');
-}
-.attend .slide3 .img_area {
-  background-image: url('https://hlab.im/hubfs/2023%20HREVOLUTION/swiper_img3.png');
-}
-.attend .slide4 .img_area {
-  background-image: url('https://hlab.im/hubfs/2023%20HREVOLUTION/swiper_img4.png');
-}
-.attend .slide5 .img_area {
-  background-image: url('https://hlab.im/hubfs/2023%20HREVOLUTION/swiper_img5.png');
-} */
 .attend .slide2, .attend .slide4 {
   background: rgba(31, 19, 19, 0.80);
   backdrop-filter: blur(25px);
@@ -833,6 +828,10 @@ header.mobile.on .menu {
 }
 
 /* session */
+.session {
+  position: relative;
+  background-color: #020202;
+}
 .session .fixed_inner {
   width: 100%;
   bottom: 0;
@@ -888,11 +887,13 @@ header.mobile.on .menu {
   /* transition: opacity 0.2s ease; */
 }
 .session .table_item {
+  position: relative;
   display: flex;
   align-items: center;
   width: 660px;
   padding: 16px 6px;
   border-top: 1px solid #515151;
+  background-color: #020202;
 }
 .session .table_item.last {
   border-bottom: 1px solid #515151;
@@ -1513,7 +1514,7 @@ header.mobile.on .menu {
   position: relative;
   margin-top: 28px;
 }
-.form .actions div {
+.form .actions a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1529,7 +1530,7 @@ header.mobile.on .menu {
   cursor:pointer;
   transition: background .5s;
 }
-.form .actions div span {
+.form .actions a span {
   font-size: 18px;
   font-weight: 400;
   color: #ff003d;
@@ -1550,7 +1551,7 @@ header.mobile.on .menu {
   cursor:pointer;
   transition: background .5s;
 }
-.form .actions input:hover + div{
+.form .actions input:hover + a {
   background: #000;
 }
 .form .hs-fieldtype-text.hs-email {
@@ -2045,15 +2046,183 @@ header.mobile.on .menu {
   column-gap: 16px;
 }
 
-/* div.mobile {
-  display: none;
-} */
+@media screen and (max-width: 1800px) {
+  /* main_visual */
+  .main_visual .mv_title {
+    width: 1200px;
+  }
+  /* slide */
+  .slide .slide_list_wrap {
+    height: 560px;
+  }
+  .slide .slide_list {
+    gap: 86px;
+    width: 1636px;
+    margin-left: -818px;
+    transform: translate3d(574px, 0, 0);
+  }
+  .slide .slide_item {
+    width: 488px;
+    height: 560px;
+  }
+  .slide .slide_item .img_area .slide_title {
+    font-size: 50px;
+    line-height: 60px;
+  }
+  .slide .slide_item .text_area {
+    top: 500px;
+  }
+  .slide .slide_item .text_area p {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .slide .slide_item.b .text_area {
+    left: -100px;
+  }
+  .slide .slide_item.c .text_area {
+    left: 0;
+  }
+  .slide .slide_btn {
+    width: 320px;
+    height: 70px;
+    margin: 90px auto 0;
+    font-size: 24px;
+  }
+  .slide .slide_btn:before {
+    width: 336px;
+    height: 86px;
+  }
+  .slide .slide_btn .sub {
+    font-size: 22px;
+  }
+}
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1600px) {
+  .main_visual .mv_title {
+    width: 1000px;
+    margin-bottom: 40px;
+  }
+  .main_visual .mv_location {
+    margin-bottom: 18px;
+    font-size: 36px;
+    line-height: 36px;
+  }
+  .main_visual .mv_date {
+    font-size: 26px;
+    line-height: 26px;
+  }
+  .main_visual .mv_btn {
+    width: 388px;
+    height: 72px;
+    margin: 260px auto 0;
+  }
+  .main_visual .mv_btn .hover {
+    width: 388px;
+    height: 72px;
+  }
+  .main_visual .mv_btn .text {
+    width: 388px;
+    height: 72px;
+    font-size: 28px;
+    line-height: 20px;
+  }
+  .main_visual .mv_btn .sub {
+    font-size: 26px;
+  }
+  .main_visual .mv_btn .text:before {
+    width: 404px;
+    height: 88px;
+  }
+
+  /* slide */
+  .slide .slide_list_wrap {
+    height: 420px;
+  }
+  .slide .slide_list {
+    gap: 70px;
+    width: 1238px;
+    margin-left: -619px;
+    transform: translate3d(434px, 0, 0);
+  }
+  .slide .slide_item {
+    width: 366px;
+    height: 420px;
+  }
+  .slide .slide_item .img_area .slide_title {
+    font-size: 40px;
+    line-height: 50px;
+  }
+  .slide .slide_item .text_area {
+    top: 372px;
+  }
+  .slide .slide_item .text_area p {
+    font-size: 24px;
+    line-height: 32px;
+  }
+  .slide .slide_item.a .text_area {
+    width: auto;
+    left: -88px;
+  }
+  .slide .slide_btn {
+    width: 240px;
+    height: 64px;
+    margin: 80px auto 0;
+    font-size: 20px;
+  }
+  .slide .slide_btn:before {
+    width: 256px;
+    height: 80px;
+  }
+  .slide .slide_btn .sub {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .main_visual .mv_title {
+    width: 800px;
+    margin-bottom: 30px;
+  }
+  .main_visual .mv_location {
+    margin-bottom: 14px;
+    font-size: 28px;
+    line-height: 28px;
+  }
+  .main_visual .mv_date {
+    font-size: 22px;
+    line-height: 22px;
+  }
+  .main_visual .mv_btn {
+    width: 300px;
+    height: 66px;
+    margin: 200px auto 0;
+  }
+  .main_visual .mv_btn .hover {
+    width: 300px;
+    height: 66px;
+  }
+  .main_visual .mv_btn .text {
+    width: 300px;
+    height: 66px;
+    font-size: 24px;
+    line-height: 20px;
+  }
+  .main_visual .mv_btn .sub {
+    font-size: 22px;
+  }
+  .main_visual .mv_btn .text:before {
+    width: 316px;
+    height: 82px;
+  }
+}
+
+/* Tablet */
+@media screen and (max-width: 1366px) {
   body.no-scroll {
     position: relative;
     overflow-y: auto;
     height: 100vh;
+    pointer-events: all;
   }
   .img_pc {
     display: none;
@@ -2072,7 +2241,11 @@ header.mobile.on .menu {
   .main_visual {
     display: block;
     height: 887px;
-    padding-top: 162px;
+    /* padding-top: 162px; */
+  }
+  .main_visual .fixed_area {
+    position: relative;
+    /* height: auto; */
   }
   .main_visual .scroll_btn {
     display: none;
@@ -2144,6 +2317,9 @@ header.mobile.on .menu {
   .story {
     position: sticky;
     top: 0;
+  }
+  .story .inner {
+    overflow: visible;
   }
   .story video {
     top: 0;
@@ -2247,17 +2423,17 @@ header.mobile.on .menu {
     top: 436x;
   }
   .slide .slide_item.a .img_area {
-    background-image: url('https://hlab.im/hubfs/2023%20HREVOLUTION/slide_img_t_1.png');
+    background-image: url('https://hlab.im/hubfs/2023%20HREVOLUTION/slide_img1_pc.png');
     opacity: 0.5;
   }
   .slide .slide_item.swiper-slide-active.a .img_area {
     opacity: 1;
   }
   .slide .slide_item.b .img_area {
-    background-image: url('https://hlab.im/hubfs/2023%20HREVOLUTION/slide_img_t_2.png');
+    background-image: url('https://hlab.im/hubfs/2023%20HREVOLUTION/slide_img2_pc.png');
   }
   .slide .slide_item.c .img_area {
-    background-image: url('https://hlab.im/hubfs/2023%20HREVOLUTION/slide_img_t_3.png');
+    background-image: url('https://hlab.im/hubfs/2023%20HREVOLUTION/slide_img3_pc.png');
   }
   .slide .slide_item .text_area {
     display: none;
@@ -2628,10 +2804,14 @@ header.mobile.on .menu {
     line-height: 36px;
   }
   .inform_top .video_pc {
+    display: none;
+  }
+  .inform_top .video_m {
+    display: block;
     position: absolute;
     right: 0;
     bottom: 0;
-    height: 588px;
+    height: 888px;
   }
   .information .inner {
     width: 720px;
@@ -2702,24 +2882,6 @@ header.mobile.on .menu {
 
 
 @media screen and (max-width: 768px) {
-  /* div.mobile {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 3000;
-    background-color: #202020;
-  }
-  div.mobile p {
-    font-size: 20px;
-    line-height: 26px;
-    text-align: center;
-    color: #fff;
-  } */
   section {
     overflow: hidden;
     background-color: #020202;
@@ -2763,7 +2925,6 @@ header.mobile.on .menu {
   /* main_visual */
   .main_visual {
     height: 768px;
-    padding-top: 160px;
   }
   .main_visual .video_area {
     height: 768px;
@@ -3054,7 +3215,6 @@ header.mobile.on .menu {
     line-height: 23px;
   }
   .inform_top .video_m {
-    display: block;
     height: 588px;
   }
   .inform_top .video_pc {
@@ -3160,6 +3320,9 @@ header.mobile.on .menu {
   }
   .submit .submit_box .box_text {
     text-align: center;
+  }
+  .submit .img_pc {
+    display: none;
   }
   
   /* qna */
