--- a/css/main.css
+++ b/css/main.css
@@ -219,6 +219,15 @@ header.mobile.on .menu {
   justify-content: center;
   align-items: center;
 }
+.main_visual .cover {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  z-index: 1000;
+}
 .main_visual .scroll_btn {
   position: absolute;
   left: 50%;
@@ -276,6 +285,9 @@ header.mobile.on .menu {
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
+}
+.main_visual #mv_video_loop {
+  opacity: 0;
 }
 .main_visual .mv_text_area {
   position: relative;
@@ -2243,6 +2255,9 @@ header.mobile.on .menu {
     height: 887px;
     /* padding-top: 162px; */
   }
+  .main_visual .cover {
+    display: none;
+  }
   .main_visual .fixed_area {
     position: relative;
     /* height: auto; */
@@ -2260,6 +2275,9 @@ header.mobile.on .menu {
     top: 0;
     height: 100%;
     transform: translate(-50%, 0);
+  }
+  .main_visual #mv_video_loop {
+    opacity: 1;
   }
   .main_visual video#mv_video_intro {
     display: none;
